# simple-gazebo-games

./: README.md
src/game_gz/: package.xml  setup.cfg  setup.py
src/game_gz/config/: duniya_ek.config
src/game_gz/game_gz/: thief_ai.py
src/game_gz/launch/: police.launch.py  test.launch.py  thief.launch.py
src/game_gz/models/Evata/: model.sdf
src/game_gz/models/Static_Car/: model.config  model.sdf
src/game_gz/models/Static_Car/meshes/: mesh.mtl
src/game_gz/rviz/: cam.rviz  police.rviz  thief.rviz
src/game_gz/urdf_police/: gazebo.xacro  materials.xacro  properties.xacro  robot.urdf  robot_macros.xacro  robot_vtwo.urdf  robot_vtwo.xacro
src/game_gz/urdf_thief/: gazebo.xacro  macros.xacro  materials.xacro  properties.xacro  tuktuk.urdf  tuktuk.xacro
src/game_gz/worlds/: duniya_ek.sdf
