<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>game_gz</name>
  <version>1.0.0</version>

  <description>
    A beginner-level ROS 2 Jazzy and Gazebo Harmonic robotics micro-project demonstrating differential-drive control, ROS-Gazebo communication and sensors.
  </description>

  <maintainer email="bhagabantagiri@gmail.com">lenovoi</maintainer>

  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>ros_gz_sim</depend>

  <exec_depend>teleop_twist_keyboard</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>